Don't requires sindjson in AlamLinux 10

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -70,6 +70,8 @@ Requires:	libzstd
 Requires:	lz4
 %if ! %{is_amazon_linux}
 Requires:	msgpack
+%endif
+%if %{have_simdjson}
 Requires:	simdjson
 %endif
 Requires:	xxhash-libs
