--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Tue Jul 29 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.4-1
+- New upstream release.
+
 * Fri Jul 18 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.3-1
 - New upstream release.
 
