--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -5,7 +5,7 @@
 
 %define _rhel %{?rhel:%{rhel}}%{!?rhel:0}
 
-%define have_simdjson (%{_rhel} != 10 && !%{is_amazon_linux})
+%define have_simdjson (%{_rhel} < 10 && !%{is_amazon_linux})
 
 %if ! %{defined cmake}
 %define cmake %{cmake3}
