cmake: suppress unused-function warning for llama.cpp
## Issue

We got the following error when we built Groonga with MariaDB.

```
/home/buildbot/_deps/llama_cpp-src/ggml/src/ggml-impl.h:111:13: error: 'void ggml_set_op_params(ggml_tensor*, const void*, size_t)' defined but not used [-Werror=unused-function]
  111 | static void ggml_set_op_params(struct ggml_tensor * tensor, const void * params, size_t params_size) {
      |             ^~~~~~~~~~~~~~~~~~
cc1plus: all warnings being treated as errors
```

## Cause

When building Groonga with MariaDB, the bundled
llama.cpp triggers `-Werror=unused-function`.

## Solution

Since upstream llama.cpp defines these static helpers
even if we don’t call them now, add
`-Wno-unused-function` to Debug and RelWithDebInfo
builds to suppress the error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1685,6 +1685,9 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
         # https://learn.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-3-c4996
         string(APPEND CMAKE_C_FLAGS " /wd4996")
         string(APPEND CMAKE_CXX_FLAGS " /wd4996")
+      elseif(GRN_C_COMPILER_GNU_LIKE)
+        string(APPEND CMAKE_C_FLAGS_DEBUG " -Wno-unused-function")
+        string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO " -Wno-unused-function")
       endif()
       set(BUILD_SHARED_LIBS ON)
       set(BUILD_STATIC_LIBS OFF)
