packages yum: add support for AlmaLinux 10 (#2403)
We omited the following test on AlmaLinux 10 by this commit.

- command/suite/tokenizers/document_vector_bm25/alphabet.test
- command/suite/tokenizers/document_vector_bm25/reindex.test
- command/suite/tokenizers/document_vector_bm25/token_column.test
-
command/suite/tokenizers/document_vector_bm25/token_column_different_lexicon.test

Because it seems that AlmaLinux 10 has different floating point number
rounding rule as below.

```
===============================================================================
[2] tokenizers/document_vector_bm25
  alphabet                                                     0.1481s [failed]
===============================================================================
--- (expected)
+++ (actual)
@@ -68,7 +68,7 @@
         3,
         "b b a",
         {
-          "b": 0.9430448,
+          "b": 0.9430449,
           "a": 0.3326656
         }
       ],
@@ -77,7 +77,7 @@
         "a c c",
         {
           "a": 0.3326656,
-          "c": 0.9430448
+          "c": 0.9430449
         }
       ],
       [
===============================================================================
.F
===============================================================================
[3] tokenizers/document_vector_bm25
  reindex                                                      0.1771s [failed]
===============================================================================
--- (expected)
+++ (actual)
@@ -74,7 +74,7 @@
         3,
         "b b a",
         {
-          "b": 0.9430448,
+          "b": 0.9430449,
           "a": 0.3326656
         }
       ],
@@ -83,7 +83,7 @@
         "a c c",
         {
           "a": 0.3326656,
-          "c": 0.9430448
+          "c": 0.9430449
         }
       ],
       [
===============================================================================
F
===============================================================================
[1] tokenizers/document_vect

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -3,6 +3,10 @@
 %define _amzn %{?amzn:%{amzn}}%{!?amzn:0}
 %define is_amazon_linux (%{_amzn} != 0)
 
+%define _rhel %{?rhel:%{rhel}}%{!?rhel:0}
+
+%define have_simdjson (%{_rhel} < 10 && !%{is_amazon_linux})
+
 %if ! %{defined cmake}
 %define cmake %{cmake3}
 %endif
@@ -36,7 +40,7 @@ BuildRequires:	msgpack-devel
 BuildRequires:	openssl-devel
 BuildRequires:	pkgconfig
 BuildRequires:	ruby
-%if ! %{is_amazon_linux}
+%if %{have_simdjson}
 BuildRequires:	simdjson-devel
 %endif
 # Old xsimd-devel doesn't work. At least 9.0.0 or older don't work.
@@ -66,6 +70,8 @@ Requires:	libzstd
 Requires:	lz4
 %if ! %{is_amazon_linux}
 Requires:	msgpack
+%endif
+%if %{have_simdjson}
 Requires:	simdjson
 %endif
 Requires:	xxhash-libs
@@ -425,6 +431,9 @@ exit 0
 %doc groonga-doc/*
 %{_datadir}/groonga/README.md
 %{_datadir}/groonga/onigmo/*
+%if ! %{have_simdjson}
+%{_datadir}/groonga/simdjson/*
+%endif
 
 %files devel
 %defattr(-,root,root,-)
