--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -384,10 +384,6 @@ elseif(MSVC)
 
   # Disable warnings
 
-  # 'argument' : conversion from 'type1' to 'type2', possible loss of data
-  # https://docs.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-2-c4244
-  string(APPEND GRN_C_COMPILE_FLAGS " /wd4244")
-  string(APPEND GRN_CXX_COMPILE_FLAGS " /wd4244")
   # 'operator': result of 32-bit shift implicitly converted to 64 bits (was 64-bit shift intended?)
   # https://learn.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-3-c4334
   string(APPEND GRN_C_COMPILE_FLAGS " /wd4334")
@@ -399,6 +395,12 @@ if(GRN_WARN_CONVERSION)
   if(GRN_C_COMPILER_GNU_LIKE)
     check_build_flag("-Wconversion")
   elseif(MSVC)
+    string(APPEND GRN_C_COMPILE_FLAGS " /W3")
+    string(APPEND GRN_CXX_COMPILE_FLAGS " /W3")
+    # 'argument' : conversion from 'type1' to 'type2', possible loss of data
+    # https://docs.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-2-c4244
+    string(APPEND GRN_C_COMPILE_FLAGS " /w24244")
+    string(APPEND GRN_CXX_COMPILE_FLAGS " /w24244")
     # 'var' : conversion from 'size_t' to 'type', possible loss of data
     # https://learn.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-3-c4267
     string(APPEND GRN_C_COMPILE_FLAGS " /w34267")
@@ -406,6 +408,10 @@ if(GRN_WARN_CONVERSION)
   endif()
 else()
   if(MSVC)
+    # 'argument' : conversion from 'type1' to 'type2', possible loss of data
+    # https://docs.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-2-c4244
+    string(APPEND GRN_C_COMPILE_FLAGS " /wd4244")
+    string(APPEND GRN_CXX_COMPILE_FLAGS " /wd4244")
     # 'var' : conversion from 'size_t' to 'type', possible loss of data
     # https://learn.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-3-c4267
     string(APPEND GRN_C_COMPILE_FLAGS " /wd4267")
