--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1691,6 +1691,8 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
                " -Wno-declaration-after-statement")
         string(APPEND CMAKE_C_FLAGS_DEBUG " -Wno-unused-function")
         string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO " -Wno-unused-function")
+        string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Wno-frame-larger-than")
+        string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Wno-frame-larger-than")
       endif()
       set(BUILD_SHARED_LIBS ON)
       set(BUILD_STATIC_LIBS OFF)
