--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -111,9 +111,7 @@ jobs:
         with:
           path: ccache
           key: cmake-ubuntu-${{ matrix.cc }}-${{ matrix.apache-arrow }}-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**', 'apache-arrow/cpp/src/**') }}
-          restore-keys: |
-            cmake-ubuntu-${{ matrix.cc }}-${{ matrix.apache-arrow }}-ccache-
-            cmake-ubuntu-${{ matrix.cc }}-ccache-
+          restore-keys: cmake-ubuntu-${{ matrix.cc }}-${{ matrix.apache-arrow }}-ccache-
       - name: Install packages
         run: |
           sudo apt update -o="APT::Acquire::Retries=3"
