cmake: suppress non-virtual-dtor warning for llama.cpp (#2476)
## Issue

We got the following error when we built Groonga with MariaDB.

```
/home/buildbot/_deps/llama_cpp-src/src/llama-memory.h:7:7: error: 'class llama_memory_i' has virtual functions and accessible non-virtual destructor [-Werror=non-virtual-dtor]
    7 | class llama_memory_i {
      |       ^~~~~~~~~~~~~~
cc1plus: all warnings being treated as errors
```

## Cause

When building Groonga with MariaDB, the bundled llama.cpp triggers
`-Werror`.

## Solution

Upstream llama.cpp doesn't setup non-virtual-dtor, so we suppress the
warning by explicitly passing `-Wno-non-virtual-dtor` in Debug and
RelWithDebInfo builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1699,6 +1699,8 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
         string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO " -Wno-unused-function")
         string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Wno-frame-larger-than")
         string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Wno-frame-larger-than")
+        string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Wno-non-virtual-dtor")
+        string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -Wno-non-virtual-dtor")
       endif()
       set(BUILD_SHARED_LIBS ON)
       set(BUILD_STATIC_LIBS OFF)
