package: update version info to 15.1.5 (2025-08-29)

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -472,6 +472,9 @@ exit 0
 %endif
 
 %changelog
+* Fri Aug 29 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.5-1
+- New upstream release.
+
 * Tue Jul 29 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.4-1
 - New upstream release.
 
