ci: add the setup test for Debian 13

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -69,6 +69,7 @@ jobs:
       matrix:
         image:
           - "images:debian/12"
+          - "images:debian/13"
           - "images:ubuntu/22.04"
           - "images:ubuntu/24.04"
           - "images:almalinux/8"
