--- a/packages/yum/amazon-linux-2023/Dockerfile
+++ b/packages/yum/amazon-linux-2023/Dockerfile
@@ -13,6 +13,7 @@ RUN \
   dnf install -y ${quiet} \
     arrow-compute-devel-${APACHE_ARROW_VERSION} \
     cmake \
+    curl-devel \
     intltool \
     libedit-devel \
     libevent-devel \
