--- a/config.h.cmake.in
+++ b/config.h.cmake.in
@@ -93,6 +93,7 @@
 #cmakedefine GRN_WITH_APACHE_ARROW
 #cmakedefine GRN_WITH_BENCHMARK
 #cmakedefine GRN_WITH_BLOSC
+#cmakedefine GRN_WITH_CURL
 #cmakedefine GRN_WITH_H3
 #cmakedefine GRN_WITH_H3_BUNDLED
 #cmakedefine GRN_WITH_KYTEA
