--- a/packages/apt/debian-trixie/Dockerfile
+++ b/packages/apt/debian-trixie/Dockerfile
@@ -30,6 +30,7 @@ RUN \
     lsb-release \
     libarrow-compute-dev \
     libarrow-dev \
+    libcurl4-openssl-dev \
     libedit-dev \
     libevent-dev \
     liblz4-dev \
