Add GCC version check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,14 +280,19 @@ set(GRN_C_FLAGS_AVX512 "")
 set(GRN_C_FLAGS_NEON64 "")
 if(MSVC)
   if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64")
+    set(GRN_SYSTEM_PROCESSOR "x86_64")
     set(GRN_C_FLAGS_AVX "/arch:AVX")
     set(GRN_C_FLAGS_AVX2 "/arch:AVX2")
     set(GRN_C_FLAGS_AVX512 "/arch:AVX512")
   elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "ARM64")
+    set(GRN_SYSTEM_PROCESSOR "arm64")
     set(GRN_C_FLAGS_NEON64 "/arch:armv8.0")
+  else()
+    set(GRN_SYSTEM_PROCESSOR "unknown")
   endif()
 else()
   if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|AMD64)$")
+    set(GRN_SYSTEM_PROCESSOR "x86_64")
     check_c_compiler_flag("-mavx" GRN_HAVE_AVX_FLAG)
     if(GRN_HAVE_AVX_FLAG)
       set(GRN_C_FLAGS_AVX "-mavx")
@@ -317,10 +322,13 @@ else()
       string(APPEND GRN_C_FLAGS_AVX512 " -mavx512vpopcntdq")
     endif()
   elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64|ARM64)$")
+    set(GRN_SYSTEM_PROCESSOR "arm64")
     check_c_compiler_flag("-march=armv8-a" GRN_HAVE_ARCH_ARMV8_A_FLAG)
     if(GRN_HAVE_ARCH_ARMV8_A_FLAG)
       set(GRN_C_FLAGS_NEON64 "-march=armv8-a")
     endif()
+  else()
+    set(GRN_SYSTEM_PROCESSOR "unknown")
   endif()
 endif()
 
@@ -1717,33 +1725,42 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
                        GGML_BUILD_NUMBER)
       set(GGML_CPU_ALL_VARIANTS ON)
       if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-        # GCC 11.5 or later is needed for "-mavxvnni" and so on
-        if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "11.5")
-          set(GGML_CPU_ALL_VARIANTS OFF)
-        endif()
-        # binutils 2.36 or later is needed for "vpdpbusd"
-        enable_language(ASM)
-        if(CMAKE_ASM_COMPILER_ID STREQUAL "GNU")
-          execute_process(
-            COMMAND
-              ${CMAKE_COMMAND} -E env
-              # Force to use English
-              LC_MESSAGES=C ${CMAKE_ASM_COMPILER}
-              # Force to use C
-              -xc
-              # Only compile
-              -c
-              # Empty input
-              /dev/null
-              # Pass --version to assembler
-              -Wa,--version
-            OUTPUT_VARIABLE ASM_VERSION_FULL)
-          string(REGEX MATCH "[0-9]+\\.[0-9]+\\.[0-9]+" ASM_VERSION
-                       "${ASM_VERSION_FULL}")
-          message(STATUS "GNU Assembler version: ${ASM_VERSION}")
-          if(ASM_VERSION VERSION_LESS "2.36")
+        if(GRN_SYSTEM_PROCESSOR STREQUAL "x86_64")
+          # GCC 11.5 or later is needed for "-mavxvnni" and so on
+          if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "11.5")
             set(GGML_CPU_ALL_VARIANTS OFF)
           endif()
+          # binutils 2.36 or later is needed for "vpdpbusd"
+          enable_language(ASM)
+          if(CMAKE_ASM_COMPILER_ID STREQUAL "GNU")
+            execute_process(
+              COMMAND
+                ${CMAKE_COMMAND} -E env
+                # Force to use English
+                LC_MESSAGES=C ${CMAKE_ASM_COMPILER}
+                # Force to use C
+                -xc
+                # Only compile
+                -c
+                # Empty input
+                /dev/null
+                # Pass --version to assembler
+                -Wa,--version
+              OUTPUT_VARIABLE ASM_VERSION_FULL)
+            string(REGEX MATCH "[0-9]+\\.[0-9]+\\.[0-9]+" ASM_VERSION
+                         "${ASM_VERSION_FULL}")
+            message(STATUS "GNU Assembler version: ${ASM_VERSION}")
+            if(ASM_VERSION VERSION_LESS "2.36")
+              set(GGML_CPU_ALL_VARIANTS OFF)
+            endif()
+          endif()
+        elseif(GRN_SYSTEM_PROCESSOR STREQUAL "arm64")
+          # GCC 13 or later is needed for "-march=armv9.2-a" and so on.
+          if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "13")
+            set(GGML_CPU_ALL_VARIANTS OFF)
+          endif()
+        else()
+          set(GGML_CPU_ALL_VARIANTS OFF)
         endif()
       endif()
       if(NOT GGML_CPU_ALL_VARIANTS)
